# urutau-icon-pack

./: meson.build
data/: com.github.arshubham.urutau-icon-pack.desktop  com.github.arshubham.urutau-icon-pack.gresource.xml  meson.build
src/: Application.vala  Main.vala  Window.vala  meson.build
src/configs/: Constants.vala  Properties.vala  Settings.vala
src/controllers/: AppController.vala
src/views/: AppView.vala  FaqView.vala  HomeView.vala  IconRequestView.vala  IconView.vala
src/widgets/: HeaderBar.vala
