sources = files(

    'configs/Constants.vala',
    'configs/Properties.vala',
    'configs/Settings.vala',

    'controllers/AppController.vala',

    'views/AppView.vala',
    'views/HomeView.vala',
    'views/IconView.vala',
    'views/IconRequestView.vala',
    'views/FaqView.vala',

    'Application.vala',
    'Main.vala',
    'Window.vala'
)
